Finished portfolio project, will make improvements on the future

--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
     ></script>
     <link rel="stylesheet" href="styles.css" />
 
-    <script
-      defer
-      src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"
-    ></script>
-
     <title>Johnnatan Portfolio</title>
   </head>
   <body>
@@ -47,7 +42,11 @@
               href="https://codepen.io/johnnatanv/full/bGvNpbQ"
               target="_blank"
             >
-              <img src="./img/PR_1.png" alt="Javascript documentation page" />
+              <img
+                class="project-img"
+                src="./img/PR_1.png"
+                alt="Javascript documentation page"
+              />
             </a>
             <p class="project-title">
               <span class="code">&#123;</span>
@@ -60,7 +59,11 @@
               href="https://codepen.io/johnnatanv/full/abWemyv"
               target="_blank"
             >
-              <img src="./img/art-cube.gif" alt="cube of pure art" />
+              <img
+                class="project-img"
+                src="./img/art-cube.gif"
+                alt="cube of pure art"
+              />
             </a>
             <p class="project-title">
               <span class="code">&#123;</span>
@@ -73,7 +76,11 @@
               href="https://johnnatanv.github.io/image-finder/"
               target="_blank"
             >
-              <img src="./img/PR_3.png" alt="Image finder app" />
+              <img
+                class="project-img"
+                src="./img/PR_3.png"
+                alt="Image finder app"
+              />
             </a>
             <p class="project-title">
               <span class="code">&#123;</span>
@@ -82,8 +89,14 @@
             </p>
           </div>
         </div>
+        <a
+          href="https://codepen.io/FreeCodeCamp/"
+          class="btn btn-show-all"
+          target="_blank"
+          >Show all<i class="fas fa-chevron-right"></i
+        ></a>
       </section>
-      <section id="contact" class="contact">
+      <section id="contact" class="contact-section">
         <div class="contact-section-header">
           <h2>Let's work together...</h2>
           <p>Do you like coffe?</p>
@@ -124,7 +137,20 @@
           </div>
         </div>
       </section>
-      <footer></footer>
+      <footer>
+        <p>
+          **This is classic Portfolio created as a proyect for FreeCodeCamp.
+        </p>
+        <p>
+          &copy; Created for
+          <a
+            class="creator"
+            href="https://https://github.com/JohnnatanV"
+            target="_blank"
+            >johnnatan_villaneda <i class="fa-brands fa-github-square"></i
+          ></a>
+        </p>
+      </footer>
     </main>
   </body>
 </html>
