Reestructuring some points of the page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/f8c00bd5ae.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
 
     <title>Johnnatan Portfolio</title>
   </head>
@@ -44,15 +44,15 @@
             >
               <img
                 class="project-img"
-                src="./img/PR_1.png"
+                src="./assets/img/PR_1.png"
                 alt="Javascript documentation page"
               />
+              <p class="project-title">
+                <span class="code">&#123;</span>
+                JS Documentation
+                <span class="code">&#125;</span>
+              </p>
             </a>
-            <p class="project-title">
-              <span class="code">&#123;</span>
-              JS Documentation
-              <span class="code">&#125;</span>
-            </p>
           </div>
           <div class="project-tile">
             <a
@@ -61,15 +61,15 @@
             >
               <img
                 class="project-img"
-                src="./img/art-cube.gif"
+                src="assets/img/art-cube.gif"
                 alt="cube of pure art"
               />
+              <p class="project-title">
+                <span class="code">&#123;</span>
+                Art Cube
+                <span class="code">&#125;</span>
+              </p>
             </a>
-            <p class="project-title">
-              <span class="code">&#123;</span>
-              Art Cube
-              <span class="code">&#125;</span>
-            </p>
           </div>
           <div class="project-tile">
             <a
@@ -78,15 +78,15 @@
             >
               <img
                 class="project-img"
-                src="./img/PR_3.png"
+                src="assets/img/PR_3.png"
                 alt="Image finder app"
               />
+              <p class="project-title">
+                <span class="code">&#123;</span>
+                Image Fider App
+                <span class="code">&#125;</span>
+              </p>
             </a>
-            <p class="project-title">
-              <span class="code">&#123;</span>
-              Image Fider App
-              <span class="code">&#125;</span>
-            </p>
           </div>
         </div>
         <a
